<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ClubPath</string>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>

    <string name="chapter1">Chapter I</string>
    <string name="chapter2">Chapter II</string>
    <string name="chapter3">Chapter III</string>
    <string name="chapter4">Icon`s Chapter</string>
    <string name="chapter5">Bonus Chapter</string>

    <string name="support">Support</string>

    <string name="settings">Settings</string>
    <string name="trophyCollection">Trophy Collection</string>
    <string name="questions">Questions</string>
    <string name="news">News</string>

    <string name="settingsWindow">SETTINGS</string>
    <string name="reset_progress">Reset Progress</string>

    <string name="trophyCollectionWindow">TROPHY COLLECTION</string>

    <string name="askWindow">HOW TO PLAY</string>

    <string name="newsWindow">WHAT`S NEW?</string>

    <string name="success">Success</string>

    <string name="selection">Selection</string>
    <string name="light_selection">Light Selection</string>
    <string name="mid_selection">Mid Selection</string>
    <string name="hard_selection">Hard Selection</string>

    <string name="loan_on">Loan On</string>
    <string name="loan_off">Loan Off</string>

    <string name="balance_format">%d CTR</string>
    <string name="user_level_format">%d LVL</string>

    <string name="todo">TODO</string>
</resources>
